// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar> renders 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 5,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#10c0bc",
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {color} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 5,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ef5160",
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {progress} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 5,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#10c0bc",
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {style} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 5,
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderRadius": 8,
        "height": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#10c0bc",
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {trackColor} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "height": 5,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      Object {
        "backgroundColor": "#ef5160",
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#10c0bc",
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;
